--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,33 @@
 
+
+
 body {
-    background: url("../images/Fox_Night_Scene_2.0.png");
-    background-repeat: no-repeat;
-    background-color: #240B50;
-    background-position: center;
-    background-attachment: fixed;
+  background-color: #240B50;
+   /* background: url("../images/Fox_Night_Scene_2.0.png");*/
+   /* background-repeat: no-repeat;
+   /* background-position: center;
+    background-attachment: fixed;*/
 }
+
+#video-container {
+  width: 100%;
+  max-width: 980px;
+  margin: auto;
+  clear: both;
+}
+
+
+video {
+  width: 100%;
+  max-width: 980px;
+  position: absolute;
+  width: auto;
+  height: auto;
+  z-index: -1;
+  
+}
+
+
 
 
 #masthead {
